--- a/_posts/2023-03-09-newlogo.md
+++ b/_posts/2023-03-09-newlogo.md
@@ -1,8 +1,8 @@
 ---
 layout: post
-title:  "New Year, New Hope for Statelessness?"
+title:  "New Logo For Stateless.my"
 author: nkj
-categories: [ Stateless Speaks ]
+categories: [ ]
 tags: [ ]
 image: assets/images/post-03-logo/1.png
 beforetoc: "The dotted flag, with its fragmented design and scribbly fill-in, powerfully captures the struggles and emotional turmoil of stateless individuals in Malaysia. Despite identifying as Malaysian, these individuals are denied citizenship and face an uncertain and bleak future."
