change auto new post

--- a/_posts/2023-03-09-newlogo.md
+++ b/_posts/2023-03-09-newlogo.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title:  "New Logo For Stateless.my"
-author: nkj
+author: wyl
 categories: [ ]
 tags: [ ]
 image: assets/images/post-03-logo/1.png
